[package]
name = "momonc-service"
version = "0.1.0"
edition = "2021"
authors = ["Sandro Sgier"]
description = """
Metaheuristic Optimization Monitoring and Control
"""

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
log = "0.4.17"
env_logger = "0.9.0"
tokio = { version = "1.20.1", features = ["full"] }
tokio-tungstenite = "0.17.2"
