[package]
name = "momonc-service"
version = "0.1.0"
edition = "2021"
authors = ["Sandro Sgier"]
license = "MIT"
description = """
Parallel Metaheuristic Optimization Monitoring and Control
"""

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
log = "0.4.17"
env_logger = "0.9.0"
tokio = { version = "1.20.1", features = ["full"] }
tokio-tungstenite = "0.17.2"
fxhash = "0.2.1"
rand = "0.8.5"
rand_distr = "0.4.3"
futures = "0.3.24"
